--- a/sections/cro-customer-reviews.liquid
+++ b/sections/cro-customer-reviews.liquid
@@ -15,6 +15,8 @@
         align-items:center;
         flex-direction:column;
         gap:20px;
+        max-width:425px;
+        margin:0 auto;
     }
     #cust-reviews-{{section.id }} .testimonial-quote{
         text-align:center;
@@ -32,6 +34,11 @@
         color:rgba(0, 0, 0, 0.7);
         svg{
             opacity:0.7;
+        }
+    }
+    @media(min-width:1024px){
+        #cust-reviews-{{section.id }}{
+            display:none;
         }
     }
 </style>
