--- a/snippets/flavor-picker.liquid
+++ b/snippets/flavor-picker.liquid
@@ -34,6 +34,13 @@
     #keen-flavor-picker .flavor-picker-product img{
         max-width:100%;
     }
+    @media(min-width:1024px){
+        #keen-flavor-picker{
+            padding: 2.4em 1.3em 0;
+            border-radius:10px 10px 0 0;
+            margin-top:1.3em;
+        }
+    }
 </style>
 <div id="keen-flavor-picker">
     <div id="flavors" style="height:6.4rem; position:absolute;z-index:-1;top:-6.4rem;"></div>
