--- a/snippets/desktop-reviews-slider.liquid
+++ b/snippets/desktop-reviews-slider.liquid
@@ -2,6 +2,7 @@
     #desktop-reviews-slider{
         width:calc(100% - 7.2rem);
         margin-left:auto;
+        margin-top:30px;
     }
     #desktop-reviews-slider .card-container{
         border:1px solid #000;
