--- a/sections/main-product-cro.liquid
+++ b/sections/main-product-cro.liquid
@@ -81,6 +81,7 @@
   #CROProduct-{{section.id }} .product-form__submit{
     border:none !important;
     margin-top:10px;
+    padding:14px;
   }
   #CROProduct-{{section.id }} .low-carb{
     font-size:13px;
