--- a/sections/cro-customer-reviews.liquid
+++ b/sections/cro-customer-reviews.liquid
@@ -6,7 +6,7 @@
         background:#fff;
     }
     #cust-reviews-{{section.id }} .card-container{
-        border:1px solid #000;
+        border:1px solid #cccccc;
         border-radius:15px;
         padding:20px;
         display:flex;
@@ -40,6 +40,7 @@
         #cust-reviews-{{section.id }}{
             display:none;
         }
+        
     }
 </style>
 <div id="cust-reviews-{{ section.id }}">
