--- a/snippets/desktop-reviews-slider.liquid
+++ b/snippets/desktop-reviews-slider.liquid
@@ -5,7 +5,7 @@
         margin-top:30px;
     }
     #desktop-reviews-slider .card-container{
-        border:1px solid #000;
+        border:1px solid #cccccc;
         border-radius:15px;
         padding:20px;
         display:flex;
