--- a/sections/main-product-cro.liquid
+++ b/sections/main-product-cro.liquid
@@ -57,7 +57,7 @@
   }
   #CROProduct-{{section.id }} .product__description{
     padding-bottom:1.2em;
-    border-bottom:#000 1px solid;
+    border-bottom:#dabe1e 1px solid;
   }
   #CROProduct-{{section.id }} .product__buy-buttons{
     margin-top:0 !important;
@@ -67,7 +67,7 @@
   }
   #CROProduct-{{section.id }} .product-form__buttons{
     padding-top:1.2em;
-    border-top:#000 1px solid
+    border-top:#dabe1e 1px solid
   }
   #CROProduct-{{section.id }} quantity-input{
     display:none;
@@ -99,7 +99,7 @@
     #CROProduct-{{section.id }} .product__description{
       border-bottom:none;
       padding-top:1.2em;
-      border-top:#000 1px solid;
+      border-top:#dabe1e 1px solid;
     }
     #CROProduct-{{section.id }} .product__buy-buttons{
       border-radius:0;
