--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -388,5 +388,6 @@
       <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
     <script src="{{ 'product-model.js' | asset_url }}" defer></script>
+    {%- render 'cro-pdp-sticky-atc' -%}
   </body>
 </html>
