--- a/snippets/flavor-picker.liquid
+++ b/snippets/flavor-picker.liquid
@@ -36,9 +36,15 @@
     }
     @media(min-width:990px){
         #keen-flavor-picker{
-            padding: 2.4em 1.3em 0;
+            padding: 30px 1.3em 0;
             border-radius:10px 10px 0 0;
             margin-top:1.3em;
+        }
+        #keen-flavor-picker .flavor-picker-heading{
+            width:100%;
+            max-width:100%;
+            text-align:left;
+            font-size:17.5px;
         }
     }
 </style>
