--- a/sections/main-product-cro.liquid
+++ b/sections/main-product-cro.liquid
@@ -153,7 +153,7 @@
       padding-top:0px;
     }
     #CROProduct-{{section.id }} .product__outer .product__info-container{
-      max-width:47em;
+      max-width:47rem;
     }
   }
 </style>
